--- a/client/stylesheets/portal-video.css
+++ b/client/stylesheets/portal-video.css
@@ -1,8 +1,8 @@
 /* CSS declarations go here */
 
 .theirVideo, .myVideo {
-	margin-left: -180px;
-	margin-top: -30px;
+/*	margin-left: -180px;
+	margin-top: -30px;*/
 }
 
 .portalImg {
@@ -14,10 +14,10 @@
 	width: 200px;
 	height: 400px;	
 
-	padding: 2px; 
+/*	padding: 2px; 
 	margin: 10px;
-	margin-left: 185px;
-	margin-top: -420px;
+	margin-left: 185px;*/
+/*	margin-top: -420px;*/
 
 	overflow: hidden;
 
